# sentinel-6-retry-lambda

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
src/sentinel_6_retry_lambda/: lambda_function.py
tests/: test_handler.py
